--- a/AdventOfCode2023.FSharp/AdventOfCode2023.FSharp.Lib/AdventOfCode2023.FSharp.Lib.fsproj
+++ b/AdventOfCode2023.FSharp/AdventOfCode2023.FSharp.Lib/AdventOfCode2023.FSharp.Lib.fsproj
@@ -7,6 +7,8 @@
 
     <ItemGroup>
         <Compile Include="Arr2D.fs" />
+        <Compile Include="EfficientString.fs" />
+        <Compile Include="Day1.fs" />
         <Compile Include="Day3.fs" />
     </ItemGroup>
 
