--- a/AdventOfCode2023.FSharp/Test/Test.fsproj
+++ b/AdventOfCode2023.FSharp/Test/Test.fsproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <Compile Include="TestDay1.fs" />
+        <Compile Include="TestDay2.fs" />
         <Compile Include="TestDay3.fs" />
     </ItemGroup>
 
