--- a/.woodpecker/.build.yml
+++ b/.woodpecker/.build.yml
@@ -6,8 +6,9 @@ steps:
       # Lint
       - "nix flake check"
       # Test
-      - nix develop --command dotnet test
-      - nix develop --command dotnet test --configuration Release
+      - nix develop --command dotnet test AdventOfCode2023.FSharp
+      - nix develop --command dotnet test AdventOfCode2023.FSharp --configuration Release
+      - nix develop --command dotnet publish AdventOfCode2023.FSharp/AdventOfCode2023.FSharp/AdventOfCode2023.FSharp --configuration Release
       - nix develop --command alejandra --check .
 
     when:
