--- a/AdventOfCode2023.FSharp/Test/Test.fsproj
+++ b/AdventOfCode2023.FSharp/Test/Test.fsproj
@@ -15,6 +15,7 @@
         <Compile Include="TestDay4.fs" />
         <Compile Include="TestDay5.fs" />
         <Compile Include="TestDay6.fs" />
+        <Compile Include="TestDay7.fs" />
         <EmbeddedResource Include="samples\day1.txt" />
         <EmbeddedResource Include="samples\day1part1.txt" />
         <EmbeddedResource Include="samples\day2.txt" />
@@ -22,6 +23,7 @@
         <EmbeddedResource Include="samples\day4.txt" />
         <EmbeddedResource Include="samples\day5.txt" />
         <EmbeddedResource Include="samples\day6.txt" />
+        <EmbeddedResource Include="samples\day7.txt" />
     </ItemGroup>
 
     <ItemGroup>
