Speed up day 7 a bit (#7)
I'm going mad, why am I doing this

Co-authored-by: Smaug123 <patrick+github@patrickstevens.co.uk>
Reviewed-on: https://gitea.patrickstevens.co.uk/patrick/advent-of-code-2023/pulls/7

--- a/AdventOfCode2023.FSharp/AdventOfCode2023.FSharp.Lib/AdventOfCode2023.FSharp.Lib.fsproj
+++ b/AdventOfCode2023.FSharp/AdventOfCode2023.FSharp.Lib/AdventOfCode2023.FSharp.Lib.fsproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
         <Compile Include="Arr2D.fs" />
+        <Compile Include="ResizeArray.fs" />
         <Compile Include="EfficientString.fs" />
         <Compile Include="Day1.fs" />
         <Compile Include="Day2.fs" />
