--- a/AdventOfCode2023.FSharp/Test/Test.fsproj
+++ b/AdventOfCode2023.FSharp/Test/Test.fsproj
@@ -16,6 +16,7 @@
         <Compile Include="TestDay5.fs" />
         <Compile Include="TestDay6.fs" />
         <Compile Include="TestDay7.fs" />
+        <Compile Include="TestDay8.fs" />
         <EmbeddedResource Include="samples\day1.txt" />
         <EmbeddedResource Include="samples\day1part1.txt" />
         <EmbeddedResource Include="samples\day2.txt" />
@@ -24,6 +25,8 @@
         <EmbeddedResource Include="samples\day5.txt" />
         <EmbeddedResource Include="samples\day6.txt" />
         <EmbeddedResource Include="samples\day7.txt" />
+        <EmbeddedResource Include="samples\day8part1.txt" />
+        <EmbeddedResource Include="samples\day8.txt" />
     </ItemGroup>
 
     <ItemGroup>
