--- a/AdventOfCode2023.FSharp/AdventOfCode2023.FSharp.Lib/AdventOfCode2023.FSharp.Lib.fsproj
+++ b/AdventOfCode2023.FSharp/AdventOfCode2023.FSharp.Lib/AdventOfCode2023.FSharp.Lib.fsproj
@@ -1,23 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
 
-    <ItemGroup>
-        <Compile Include="Arr2D.fs" />
-        <Compile Include="ResizeArray.fs" />
-        <Compile Include="EfficientString.fs" />
-        <Compile Include="Arithmetic.fs" />
-        <Compile Include="Day1.fs" />
-        <Compile Include="Day2.fs" />
-        <Compile Include="Day3.fs" />
-        <Compile Include="Day4.fs" />
-        <Compile Include="Day5.fs" />
-        <Compile Include="Day6.fs" />
-        <Compile Include="Day7.fs" />
-        <Compile Include="Day8.fs" />
-    </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Arr2D.fs"/>
+    <Compile Include="ResizeArray.fs"/>
+    <Compile Include="EfficientString.fs"/>
+    <Compile Include="Arithmetic.fs"/>
+    <Compile Include="Rational.fs"/>
+    <Compile Include="Day1.fs"/>
+    <Compile Include="Day2.fs"/>
+    <Compile Include="Day3.fs"/>
+    <Compile Include="Day4.fs"/>
+    <Compile Include="Day5.fs"/>
+    <Compile Include="Day6.fs"/>
+    <Compile Include="Day7.fs"/>
+    <Compile Include="Day8.fs"/>
+    <Compile Include="Day9.fs"/>
+  </ItemGroup>
 
 </Project>
