Day 11, super slow (#12)
Co-authored-by: Smaug123 <patrick+github@patrickstevens.co.uk>
Reviewed-on: https://gitea.patrickstevens.co.uk/patrick/advent-of-code-2023/pulls/12

--- a/AdventOfCode2023.FSharp/Test/Test.fsproj
+++ b/AdventOfCode2023.FSharp/Test/Test.fsproj
@@ -19,6 +19,7 @@
     <Compile Include="TestDay8.fs"/>
     <Compile Include="TestDay9.fs"/>
     <Compile Include="TestDay10.fs" />
+    <Compile Include="TestDay11.fs" />
     <EmbeddedResource Include="samples\day1.txt"/>
     <EmbeddedResource Include="samples\day1part1.txt"/>
     <EmbeddedResource Include="samples\day2.txt"/>
@@ -32,6 +33,7 @@
     <EmbeddedResource Include="samples\day9.txt"/>
     <EmbeddedResource Include="samples\day10part1.txt" />
     <EmbeddedResource Include="samples\day10.txt" />
+    <EmbeddedResource Include="samples\day11.txt" />
   </ItemGroup>
 
   <ItemGroup>
