--- a/AdventOfCode2023.FSharp/AdventOfCode2023.FSharp.Lib/AdventOfCode2023.FSharp.Lib.fsproj
+++ b/AdventOfCode2023.FSharp/AdventOfCode2023.FSharp.Lib/AdventOfCode2023.FSharp.Lib.fsproj
@@ -21,6 +21,7 @@
     <Compile Include="Day8.fs"/>
     <Compile Include="Day9.fs"/>
     <Compile Include="Day10.fs" />
+    <Compile Include="Day11.fs" />
   </ItemGroup>
 
 </Project>
