--- a/AdventOfCode2023.FSharp/Test/Test.fsproj
+++ b/AdventOfCode2023.FSharp/Test/Test.fsproj
@@ -20,6 +20,7 @@
     <Compile Include="TestDay9.fs"/>
     <Compile Include="TestDay10.fs" />
     <Compile Include="TestDay11.fs" />
+    <Compile Include="TestDay12.fs" />
     <EmbeddedResource Include="samples\day1.txt"/>
     <EmbeddedResource Include="samples\day1part1.txt"/>
     <EmbeddedResource Include="samples\day2.txt"/>
@@ -34,6 +35,7 @@
     <EmbeddedResource Include="samples\day10part1.txt" />
     <EmbeddedResource Include="samples\day10.txt" />
     <EmbeddedResource Include="samples\day11.txt" />
+    <EmbeddedResource Include="samples\day12.txt" />
   </ItemGroup>
 
   <ItemGroup>
