--- a/AdventOfCode2023.FSharp/Test/Test.fsproj
+++ b/AdventOfCode2023.FSharp/Test/Test.fsproj
@@ -21,6 +21,7 @@
     <Compile Include="TestDay10.fs" />
     <Compile Include="TestDay11.fs" />
     <Compile Include="TestDay12.fs" />
+    <Compile Include="TestDay13.fs" />
     <EmbeddedResource Include="samples\day1.txt"/>
     <EmbeddedResource Include="samples\day1part1.txt"/>
     <EmbeddedResource Include="samples\day2.txt"/>
@@ -36,6 +37,7 @@
     <EmbeddedResource Include="samples\day10.txt" />
     <EmbeddedResource Include="samples\day11.txt" />
     <EmbeddedResource Include="samples\day12.txt" />
+    <EmbeddedResource Include="samples\day13.txt" />
   </ItemGroup>
 
   <ItemGroup>
