--- a/AdventOfCode2023.FSharp/Test/Test.fsproj
+++ b/AdventOfCode2023.FSharp/Test/Test.fsproj
@@ -23,6 +23,7 @@
     <Compile Include="TestDay12.fs" />
     <Compile Include="TestDay13.fs" />
     <Compile Include="TestDay14.fs" />
+    <Compile Include="TestDay15.fs" />
     <EmbeddedResource Include="samples\day1.txt"/>
     <EmbeddedResource Include="samples\day1part1.txt"/>
     <EmbeddedResource Include="samples\day2.txt"/>
@@ -40,6 +41,7 @@
     <EmbeddedResource Include="samples\day12.txt" />
     <EmbeddedResource Include="samples\day13.txt" />
     <EmbeddedResource Include="samples\day14.txt" />
+    <EmbeddedResource Include="samples\day15.txt" />
   </ItemGroup>
 
   <ItemGroup>
