--- a/AdventOfCode2023.FSharp/Test/Test.fsproj
+++ b/AdventOfCode2023.FSharp/Test/Test.fsproj
@@ -24,6 +24,7 @@
     <Compile Include="TestDay13.fs" />
     <Compile Include="TestDay14.fs" />
     <Compile Include="TestDay15.fs" />
+    <Compile Include="TestDay16.fs" />
     <EmbeddedResource Include="samples\day1.txt"/>
     <EmbeddedResource Include="samples\day1part1.txt"/>
     <EmbeddedResource Include="samples\day2.txt"/>
@@ -42,6 +43,7 @@
     <EmbeddedResource Include="samples\day13.txt" />
     <EmbeddedResource Include="samples\day14.txt" />
     <EmbeddedResource Include="samples\day15.txt" />
+    <EmbeddedResource Include="samples\day16.txt" />
   </ItemGroup>
 
   <ItemGroup>
