--- a/AdventOfCode2023.FSharp/Test/Test.fsproj
+++ b/AdventOfCode2023.FSharp/Test/Test.fsproj
@@ -5,10 +5,15 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+
+    <EnableStaticNativeInstrumentation>False</EnableStaticNativeInstrumentation>
+    <EnableDynamicNativeInstrumentation>False</EnableDynamicNativeInstrumentation>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Include="Util.fs"/>
+    <Compile Include="TestIntervalSet.fs" />
+    <Compile Include="TestList.fs" />
     <Compile Include="TestDay1.fs"/>
     <Compile Include="TestDay2.fs"/>
     <Compile Include="TestDay3.fs"/>
@@ -25,6 +30,7 @@
     <Compile Include="TestDay14.fs" />
     <Compile Include="TestDay15.fs" />
     <Compile Include="TestDay16.fs" />
+    <Compile Include="TestDay19.fs" />
     <EmbeddedResource Include="samples\day1.txt"/>
     <EmbeddedResource Include="samples\day1part1.txt"/>
     <EmbeddedResource Include="samples\day2.txt"/>
@@ -44,11 +50,14 @@
     <EmbeddedResource Include="samples\day14.txt" />
     <EmbeddedResource Include="samples\day15.txt" />
     <EmbeddedResource Include="samples\day16.txt" />
+    <EmbeddedResource Include="samples\day19.txt" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FsCheck" Version="2.16.6" />
     <PackageReference Include="FsUnit" Version="5.6.1"/>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0"/>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
+    <PackageReference Include="Microsoft.CodeCoverage" Version="17.8.0"/>
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1"/>
     <PackageReference Include="NUnit.Analyzers" Version="3.6.1"/>
     <PackageReference Include="coverlet.collector" Version="6.0.0"/>
