--- a/AdventOfCode2023.FSharp/AdventOfCode2023.FSharp.Lib/AdventOfCode2023.FSharp.Lib.fsproj
+++ b/AdventOfCode2023.FSharp/AdventOfCode2023.FSharp.Lib/AdventOfCode2023.FSharp.Lib.fsproj
@@ -13,6 +13,7 @@
     <Compile Include="Arithmetic.fs"/>
     <Compile Include="Rational.fs"/>
     <Compile Include="IntervalSet.fs" />
+    <Compile Include="Direction.fs" />
     <Compile Include="List.fs" />
     <Compile Include="Day1.fs"/>
     <Compile Include="Day2.fs"/>
@@ -30,6 +31,7 @@
     <Compile Include="Day14.fs" />
     <Compile Include="Day15.fs" />
     <Compile Include="Day16.fs" />
+    <Compile Include="Day18.fs" />
     <Compile Include="Day19.fs" />
   </ItemGroup>
 
